--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "django-viewrouter"
-version = "0.1.2"
+version = "0.1.3"
 description = ""
 authors = ["Kamal Mustafa <k4ml@github.io>"]
 license = "MIT"
@@ -9,7 +9,7 @@ packages = [{include = "viewrouter"}]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-Django = "^3.0"
+Django = ">=3.0"
 
 
 [build-system]
